[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygeoweaver"
version = "1.0.9"
authors = [{ name="Geoweaver team", email="geoweaver.app@gmail.com" }]
description = "This is a wrapper package of the Geoweaver app."
readme = "README.md"
requires-python = ">=3.7,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "setuptools",
    "requests",
    "pydantic",
    "ipython",
    "pandas",
    "halo",
    "tabulate",
    "psutil",
    "pytest-xdist",
]

[project.urls]
Homepage = "https://github.com/ESIPFed/pygeoweaver"

[project.scripts]
geoweaver = "pygeoweaver.__main__:geoweaver"
gw = "pygeoweaver.__main__:geoweaver"
